<resources>
    <!--App Name-->
    <string name="app_name">The News</string>

    <!--Inform no intern connection-->
    <string name="no_internet_connection">No Internet Connection. Check Internet Settings</string>
    <!--Inform no articles to load-->
    <string name="no_articles_found">No News Found. Check Later.</string>

    <!--Temporary Text for News List Item layout-->
    <string name="temp_title">Article Title with Wrap to 2 Lines of Text</string>
    <string name="temp_category">Category</string>
    <string name="temp_author">Yahir Rendon</string>
    <string name="temp_date">TIME 15 Oct 18</string>

    <!--Settings title onClick-->
    <string name="settings_menu_title">Settings</string>
    <!--Settings Menu Title-->
    <string name="settings_title">The News Settings</string>

    <!--Settings label, key and default-->
    <string name="settings_category_label">Search Category</string>
    <string name="settings_category_key" translatable="false">Topic</string>
    <string name="settings_category_default" translatable="false">World News</string>

    <!-- Settings For Number of Articles Limit -->
    <string name="settings_limit_label">Number of articles to display</string>
    <string name="settings_limit_key" translatable="false">Limit</string>
    <string name="settings_limit_default" translatable="false">15</string>

    <!-- Strings For Order-By Preference-->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by Relevance option -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <!-- Addition to author setText -->
    <string name="by_author_text">by\u0020</string>
</resources>
