<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_category_default"
        android:inputType="textCapWords"
        android:key="@string/settings_category_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_category_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_limit_key"
        android:maxLength="2"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_label" />

</PreferenceScreen>